--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,5 @@
     "mongodb"
   ],
   "author": "Piska Piotr",
-  "license": "ISC",
-  "dependencies": {
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2"
-  }
+  "license": "ISC"
 }
