--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-lazy-load-image-component": "^1.4.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
