--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon ./server/index.js",
+    "server": "npm run start --prefix server",
     "client": "npm run start --prefix client",
     "start": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -20,8 +20,12 @@
   "homepage": "https://github.com/WingedPepcios/MemeStorage#readme",
   "devDependencies": {
     "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0"
   },
   "dependencies": {
     "concurrently": "^5.0.2"
