--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
+    "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-lazy-load-image-component": "^1.4.0",
